--- a/style.css
+++ b/style.css
@@ -76,3 +76,18 @@
             display: none;
             z-index: 100;
         }
+
+        .glow {
+            box-shadow: 0 0 10px 5px rgb(255, 127, 255);
+            animation: glowing 1.5s infinite alternate; /* Optional: adds a pulsing effect */
+        }
+
+        @keyframes glowing {
+            from {
+            box-shadow: 0 0 5px 2px rgb(255, 127, 255);
+            }
+            to {
+            box-shadow: 0 0 20px 10px rgb(255, 127, 255);
+            }
+        }
+
